# meow-ai

./: .oxfmtrc.json  README.md  components.json  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.node.json  vite.config.ts
infra/utils/: datetime.py
kernel/schemas/: agent.py
plugins/: index.ts
src/: App.tsx  main.tsx
src/agents/: simple_agent.py
src/api/: main.py
src/api/routes/: chat.py
src/app/providers/: app-providers.tsx
src/app/query/: query-client.ts
src/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  light-rays.tsx  sheet.tsx  sonner.tsx  tooltip.tsx
src/features/agent/: agent.api.ts  agent.queries.ts  agent.schemas.ts
src/features/auth/: auth.api.ts  auth.queries.ts  auth.schemas.ts
src/features/chat/: chat.api.ts  chat.messages.ts  chat.queries.ts  chat.schemas.ts  chat.stream.ts
src/features/session/: session.api.ts  session.queries.ts  session.schemas.ts
src/infra/llm/: client.py
src/infra/writer/: presenter.py
src/kernel/schemas/: agent.py
src/routes/: __root.tsx  chat.tsx  index.tsx  login.tsx
src/shared/api/: client.ts  config.ts  health.ts  token-refresh.ts  token-storage.ts
